# rust-study

./: .gitignore
Teste1/: Cargo.toml
ex1/src/: main.rs
ex2/src/: main.rs
ex3/src/: main.rs
ex4/src/: main.rs
ex5/src/: main.rs
ex6/src/: main.rs
ex7/src/: main.rs
ex8/src/: main.rs
helloWorld/src/: main.rs
investida/: .gitignore  Cargo.toml
investida/src/: main.rs
investida/src/data/: fills.csv  new_fills.csv
investida/src/modules/: cal_dividend.rs  cal_end.rs  cal_profit.rs  cal_rate.rs  list_data.rs  rmv_acent.py
investida/src/views/: window.py
investida/tests/: tests.rs
listaEncadeada/: Cargo.toml
listaEncadeada/src/: main.rs
lista_encadeada/src/: main.rs
mem-view/: Cargo.toml
mem-view/src/: main.rs  structs.rs
mysqlDB/: .gitignore  Cargo.toml  docker-compose.yaml  dockerfile
mysqlDB/src/: main.rs
mysqlDB/src/db1/: main.rs
mysqlDB/src/db2/: db.rs  main.rs
saphira/: Cargo.toml  README.md
saphira/src/: main.rs  prelude.rs
saphira/src/controller/: control.rs
saphira/src/models/: equipment.rs  rental.rs  rentals.rs
slint-test/: Cargo.toml
slint-test/testing-slint/: Cargo.toml
step1/primitivos/: Cargo.toml
struct_of_data/: Cargo.toml
struct_of_data/src/: main.rs
tipos_customizaveis/: Cargo.toml
tipos_customizaveis/src/: main.rs
treeBinary/src/: main.rs
tree_avl/: Cargo.toml
tree_avl/src/: main.rs  tempCodeRunnerFile.rs
tree_binary/: Cargo.toml
tree_binary/src/: main.rs
webasm-rust/: Cargo.toml  LICENSE_MIT  package-lock.json
webasm-rust/src/: lib.rs
webasm-rust/tests/: web.rs
(+38 files in other folders)
